included . in path of resources in html

--- a/Layout/index.html
+++ b/Layout/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/wwwroot/bootstrap/css/bootstrap.css">
-    <script src="/wwwroot/jquery/jquery-3.5.1.slim.min.js"></script>
-    <script src="/wwwroot/bootstrap/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="/wwwroot/style/customStyle.css"> 
-    <link rel="stylesheet" href="/wwwroot/fontawesome/css/all.css">
+    <link rel="stylesheet" href="./wwwroot/bootstrap/css/bootstrap.css">
+    <script src="./wwwroot/jquery/jquery-3.5.1.slim.min.js"></script>
+    <script src="./wwwroot/bootstrap/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="./wwwroot/style/customStyle.css"> 
+    <link rel="stylesheet" href="./wwwroot/fontawesome/css/all.css">
 
 </head>
 <body class="container-fluid px-0 " >
@@ -22,7 +22,7 @@
             </div>
             <div class="buffer1"></div>
             <div class="userImage">
-                <img src="/images/edited.JPG" class="rounded-circle" alt=""  style="width: 120px;height: 120px;"  >
+                <img src="./images/edited.JPG" class="rounded-circle" alt=""  style="width: 120px;height: 120px;"  >
             </div>
             <div class="userWelcomeMsg">
                 <h6 class="text-center text-white ">Hi, Ademola.</h6>
@@ -219,6 +219,6 @@
 
 
 
-<script src="/wwwroot/script/customScript.js"></script>
+<script src="./wwwroot/script/customScript.js"></script>
 </body>
 </html>
