--- a/Layout/wwwroot/style/customStyle.css
+++ b/Layout/wwwroot/style/customStyle.css
@@ -25,7 +25,7 @@
    width: 225px;
 */
    border:1px solid darkred;
-   background-color: brown;
+   background-color: rgb(207, 163, 163);
    grid-area: sidePanel;
    transition: all 5s ease-in-out; 
    overflow: hidden;
