--- a/Layout/wwwroot/style/customStyle.css
+++ b/Layout/wwwroot/style/customStyle.css
@@ -8,7 +8,7 @@
     background-color: rgb(228, 220, 210);
 
     display: grid;
-    grid-template-columns: 25fr 75fr;
+    grid-template-columns: 15fr 85fr;
     grid-template-rows: 1fr;
     grid-template-areas: "sidePanel mainPanel";
     
@@ -25,7 +25,7 @@
    width: 225px;
 */
    border:1px solid darkred;
-   background-color: rgb(28, 136, 224);
+   background-color: brown;
    grid-area: sidePanel;
    transition: all 5s ease-in-out; 
    overflow: hidden;
