--- a/Layout/wwwroot/style/customStyle.css
+++ b/Layout/wwwroot/style/customStyle.css
@@ -29,7 +29,7 @@
    grid-area: sidePanel;
    transition: all 5s ease-in-out; 
    overflow-x: hidden;
-   overflow-y: scroll;
+   overflow-y: auto ;
    z-index: 1;
    /**/
    display: grid;
