--- a/LayoutC/scss/_layout.scss
+++ b/LayoutC/scss/_layout.scss
@@ -13,42 +13,53 @@
         {
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows:250px  1fr;
-            grid-template-areas: "sidePanelArea", "mainPanelArea"; 
+            grid-template-rows: 9fr 1fr ;
+            grid-template-areas: "sidePanelArea" "mainPanelArea"; 
          
         }
+
         .sidePanel{
             background: blue;
+            grid-area: sidePanelArea ;
         }
+
         .mainPanel{
             background:lighten($color: blue, $amount: 20%);
+            grid-area: mainPanelArea ;
         }  
     }
+
 //End MobileQuery
 
+
+
  //Tablet MediaQuery   
+
     @media screen and (min-width:300px) and (max-width:750px )
     {
         .wrapper
         {
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 2fr  1fr;
+            grid-template-rows: 1fr 50px;
             grid-template-areas: "sidePanelArea "
-                                 "mainPanelArea";
+                                 "mainPanelArea ";
         }
 
         .sidePanel{
             background: green;
+            grid-area: sidePanelArea ;
         }
         .mainPanel{
             background:lighten($color: green, $amount: 20%);
+            grid-area: mainPanelArea ;
         }        
     }
 
 //End TabletQuery
 
- //Laptop MediaQuery   
+ //Laptop MediaQuery  
+
     @media screen and (min-width:750px )
     {
         .wrapper
@@ -61,9 +72,11 @@
 
         .sidePanel{
             background: red;
+            grid-area: sidePanelArea ;
         }
         .mainPanel{
             background:lighten($color: red, $amount: 20%);
+            grid-area: mainPanelArea ;
         }        
     }
 
