--- a/Sidebar/sassy/main.scss
+++ b/Sidebar/sassy/main.scss
@@ -37,14 +37,13 @@ $knobBgColor:rgb(4, 33, 77);
 
     display: grid;
     grid-template-columns: 40px  1fr 40px;
-    grid-template-rows: 40px 50px 5px 100px 25px 50px 1fr 100px;
+    grid-template-rows: 40px 50px 5px 100px 25px 25px  1fr 100px;
     grid-template-areas:(". . sidebarKnob_Area")
                         ("appTitle_Area appTitle_Area appTitle_Area")
                         (". . .")
                         (". userImg_Area .")
                         (". userMsg_Area  .")
-                        (". line_Area .")
-
+                        (". . .")
                         (" accordion_Area accordion_Area accordion_Area")
                         (". . .")  ;
 
@@ -136,19 +135,7 @@ background-color:$knobBgColor ;
 }
 
 
-.lines
-{
-    grid-area: line_Area;  
-    hr
-    {
-    color:white;
-    border-top: 1px solid white;
-   border-bottom: 1px solid white;
-    }
-  
 
-
-}
 
 
 .accordion
